--- a/addons/codeandweb.texturepacker/plugin.cfg
+++ b/addons/codeandweb.texturepacker/plugin.cfg
@@ -1,8 +1,8 @@
 config_version=3
 [plugin]
 
-name="TexturePacker Importer"
-description="Importer for SpriteSheets created using TexturePacker"
+name="ShoeBox Importer"
+description="Importer for SpriteSheets created using ShoeBox"
 version="1.0"
-author="Andreas Loew / CodeAndWeb GmbH"
-script="codeandweb.texturepacker_importer.gd"
+author="pirate"
+script="shoebox_importer.gd"
