--- a/addons/shoebox_importer/plugin.cfg
+++ b/addons/shoebox_importer/plugin.cfg
@@ -1,8 +1,8 @@
 config_version=3
 [plugin]
 
-name="ShoeBox Importer"
-description="Importer for SpriteSheets created using ShoeBox"
+name="PixiJS Sprite Sheet Importer"
+description="Importer for sprite sheets created for PixiJS"
 version="1.0"
 author="pirate"
-script="shoebox_importer.gd"
+script="pixijs_importer.gd"
